--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  provider: ^4.3.3
-  http: ^0.12.2
+  cupertino_icons: ^1.0.5
+  provider: ^6.0.4
+  http: ^0.13.5
+  shared_preferences: ^2.0.15
+  flutter_spinkit: ^5.1.0
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
