--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.9
+  intl: ^0.15.7
 
 dev_dependencies:
   flutter_test:
