--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.9
   intl: ^0.15.7
+  flutter_html: ^2.2.1
 
 dev_dependencies:
   flutter_test:
