--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   fluttertoast: ^8.0.9
   intl: ^0.15.7
   flutter_html: ^2.2.1
+  file_picker: ^5.2.3
 
 dev_dependencies:
   flutter_test:
